--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,21 +1,35 @@
 <!-- top navigation menu -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
     <a class="navbar-brand" href="/">
-        <img src="/static/images/favicon/apple-touch-icon.png" width="30" height="30" class="d-inline-block align-top" alt="">
-        tomoyan
+        <img
+            src="/static/images/favicon/apple-touch-icon.png"
+            width="30" height="30"
+            class="d-inline-block align-top" alt="blurt_logo">
+        BlurtBlock
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse"
+        data-target="#navbarToggler" aria-controls="navbarToggler"
+        aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-        <li class="nav-item">
-            <a class="nav-link" href="/blurt">Blurt<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/swap">Swap Token<span class="sr-only">(current)</span></a>
-        </li>
-    </ul>
+    <div class="collapse navbar-collapse" id="navbarToggler">
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item">
+                <a class="nav-link" href="/blurt/stats">BlurtStats
+                    <!-- <span class="sr-only">(current)</span> -->
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/blurt/upvote">BlurtUpvote
+                </a>
+            </li>
+        </ul>
+
+        <a class="btn btn-outline-success"
+            href="https://register.blurt.buzz/?referral=tomoyan"
+            target="_blank" rel="noopener noreferrer"
+            role="button">Sign Up
+        </a>
     </div>
 </nav>
