add blurt upvote

--- a/templates/blurt/upvote.html
+++ b/templates/blurt/upvote.html
@@ -87,7 +87,7 @@
                             >
                             <!-- readonly> -->
                         <small id="urlHelp" class="form-text text-muted">
-                            Witness suppoerters will receive one upvote a day
+                            Witness suppoerters will receive 100% upvote.
                         </small>
                     </div>
                     <!-- <button type="submit" class="btn btn-blurt" disabled>Submit</button> -->
@@ -125,9 +125,7 @@
                     {% endif %}
                     {% endwith %}
 
-                    <span
-                        class="d-inline-block" tabindex="0"
-                        data-toggle="tooltip" title="Soon?">
+                    <span class="d-inline-block" tabindex="0">
                         <button type="submit" class="btn btn-blurt">Submit</button>
                     </span>
                 </form>
