--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -29,7 +29,7 @@
         <a class="btn btn-outline-success"
             href="https://register.blurt.buzz/?referral=tomoyan"
             target="_blank" rel="noopener noreferrer"
-            role="button">Sign Up
+            role="button">Get Started
         </a>
     </div>
 </nav>
