--- a/templates/blurt/upvote.html
+++ b/templates/blurt/upvote.html
@@ -56,12 +56,16 @@
                         target="_blank" rel="noopener noreferrer">
                         <u>@tomoyan</u>
                     </a>
-                    every 24 hours
+                    every 12 hours
                 </p>
                 <hr class="my-4">
-                <p>
+                <p class="lead">
                     This feature will be open for my witness supporters first.
-                    (and maybe BP delegators)
+                    <br>
+                    BLURT POWER (BP) delegation bonus is LIVE!
+                </p>
+                <p class="font-weight-light">
+                    The more you delegate, the better UPVOTE you receive!
                 </p>
                 <p class="lead">
                     <a class="btn btn-primary  btn-lg" role="button"
@@ -85,9 +89,8 @@
                             aria-describedby="urlHelp"
                             placeholder="https://blurt.blog/@USERNAME/post-address"
                             >
-                            <!-- readonly> -->
                         <small id="urlHelp" class="form-text text-muted">
-                            Witness suppoerters will receive 100% upvote.
+                            Witness suppoerters will receive up to 100% UPVOTE.
                         </small>
                     </div>
                     <!-- <button type="submit" class="btn btn-blurt" disabled>Submit</button> -->
