--- a/templates/blurt/profile_data.html
+++ b/templates/blurt/profile_data.html
@@ -32,23 +32,7 @@
         <!-- <script src="https://kit.fontawesome.com/7933aa8507.js" crossorigin="anonymous"></script> -->
 
         <!-- Primary Meta Tags -->
-        <title>BlurtBlock - Blurt Profile Information</title>
-        <meta name="title" content="BlurtBlock - Blurt Profile Information">
-        <meta name="description" content="BlurtBlock is a Blurt Blockchain Explorer. Displays user information, vote chart, reward summary, stats and more!">
-
-        <!-- Open Graph / Facebook -->
-        <meta property="og:type" content="website">
-        <meta property="og:url" content="https://blurtblock.herokuapp.com/">
-        <meta property="og:title" content="BlurtBlock - Blurt Profile Information">
-        <meta property="og:description" content="BlurtBlock is a Blurt Blockchain Explorer. Displays user information, vote chart, reward summary, stats and more!">
-        <meta property="og:image" content="https://blurtblock.herokuapp.com/static/images/blurtblock.png">
-
-        <!-- Twitter -->
-        <meta property="twitter:card" content="summary_large_image">
-        <meta property="twitter:url" content="https://blurtblock.herokuapp.com/">
-        <meta property="twitter:title" content="BlurtBlock - Blurt Profile Information">
-        <meta property="twitter:description" content="BlurtBlock is a Blurt Blockchain Explorer. Displays user information, vote chart, reward summary, stats and more!">
-        <meta property="twitter:image" content="https://blurtblock.herokuapp.com/static/images/blurtblock.png">
+        {% include 'metatags.html' %}
 
     </head>
     <body>
@@ -117,12 +101,18 @@
                        // 1, 7, 30 day rewards api
                        document.rewardOne_api = '/api/blurt/reward/{{ username }}/1';
                        document.rewardSeven_api = '/api/blurt/reward/{{ username }}/7';
-                       document.rewardThirty_api = '/api/blurt/reward/{{ username }}/30';
+                       document.rewardThirtyApi = '/api/blurt/reward/{{ username }}/30';
+
+                       // document.authorReward30 = '/api/blurt/author_reward/{{ username }}/30';
+                       // document.curationReward30 = '/api/blurt/curation_reward/{{ username }}/30';
+                       // document.producerReward30 = '/api/blurt/producer_reward/{{ username }}/30';
 
                        document.follower_api = '/api/blurt/follower/{{ username }}';
                        document.following_api = '/api/blurt/following/{{ username }}';
                        document.mute_api = '/api/blurt/mute/{{ username }}';
-                       document.delegation_api = '/api/blurt/delegation/{{ username }}';
+                       document.delegationApiIn = '/api/blurt/delegation/{{ username }}/in';
+                       document.delegationApiOut = '/api/blurt/delegation/{{ username }}/out';
+                       document.delegationApiExp = '/api/blurt/delegation/{{ username }}/exp';
                     </script>
                     <script type="text/javascript" src="{{ url_for('static', filename='js/blurt.js') }}">
                     </script>
@@ -347,46 +337,7 @@
 
                 </div>
 
-                <!-- List of Reward -->
-<!--                 <div class="tab-pane fade" id="nav-reward" role="tabpanel" aria-labelledby="nav-reward-tab">
-                    <h1 class="display-4">Reward Summary</h1>
-                    <div class="row">
-                        <div class="col">
-                            <div class="card mb-3">
-                                <div class="card-body pt-1 pb-1">
-                                    <ul id="rewardResult" class="list-group list-group-flush">
-                                        <div id="mdb-preloader" class="text-center">
-                                            <div class="spinner-grow text-blurt m-3" role="status">
-                                                <span class="sr-only">Loading...</span>
-                                            </div>
-                                            <div class="spinner-border text-blurt m-3" role="status">
-                                                <span class="sr-only">Loading...</span>
-                                            </div>
-                                            <div class="spinner-grow text-blurt m-3" role="status">
-                                                <span class="sr-only">Loading...</span>
-                                            </div>
-                                            <div class="spinner-border text-blurt m-3" role="status">
-                                                <span class="sr-only">Loading...</span>
-                                            </div>
-                                            <div class="spinner-grow text-blurt m-3" role="status">
-                                                <span class="sr-only">Loading...</span>
-                                            </div>
-                                            <div class="text-center">
-                                                Loading data...
-                                                <img
-                                                    src="{{ url_for('static', filename='images/loading.gif') }}"
-                                                    class="rounded"
-                                                    alt="loading">
-                                            </div>
-                                        </div>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
-
-                <!-- New List of Rewards -->
+                <!-- List of Rewards -->
                 <div class="tab-pane fade" id="rewards" role="tabpanel" aria-labelledby="rewards-tab">
                     <h1 class="display-4">Reward Summary</h1>
                     <div class="row">
@@ -505,7 +456,7 @@
                                               </div>
                                             </div>
                                         </li>
-                                        <!-- 14 days rewards -->
+                                        <!-- 30 days rewards -->
                                         <li class="list-group-item" data-field="">
                                             <div class="container">
                                               <div class="row">
@@ -706,19 +657,19 @@
                                     <ul id="outgoingResult"class="list-group list-group-flush">
                                         <!-- loading spinner -->
                                         <div id="mdb-preloader" class="text-center">
-                                            <div class="spinner-grow text-blurt m-3" role="status">
+                                            <div class="spinner-grow spinner-grow-sm text-blurt m-3" role="status">
                                                 <span class="sr-only">Loading...</span>
                                             </div>
-                                            <div class="spinner-border text-blurt m-3" role="status">
+                                            <div class="spinner-border spinner-border-sm text-blurt m-3" role="status">
                                                 <span class="sr-only">Loading...</span>
                                             </div>
-                                            <div class="spinner-grow text-blurt m-3" role="status">
+                                            <div class="spinner-grow spinner-grow-sm text-blurt m-3" role="status">
                                                 <span class="sr-only">Loading...</span>
                                             </div>
-                                            <div class="spinner-border text-blurt m-3" role="status">
+                                            <div class="spinner-border spinner-border-sm text-blurt m-3" role="status">
                                                 <span class="sr-only">Loading...</span>
                                             </div>
-                                            <div class="spinner-grow text-blurt m-3" role="status">
+                                            <div class="spinner-grow spinner-grow-sm text-blurt m-3" role="status">
                                                 <span class="sr-only">Loading...</span>
                                             </div>
                                         </div>
@@ -737,19 +688,19 @@
                                     <ul id="expiringResult"class="list-group list-group-flush">
                                         <!-- loading spinner -->
                                         <div id="mdb-preloader" class="text-center">
-                                            <div class="spinner-grow text-blurt m-3" role="status">
+                                            <div class="spinner-border spinner-border-sm text-blurt m-3" role="status">
                                                 <span class="sr-only">Loading...</span>
                                             </div>
-                                            <div class="spinner-border text-blurt m-3" role="status">
+                                            <div class="spinner-grow spinner-grow-sm text-blurt m-3" role="status">
                                                 <span class="sr-only">Loading...</span>
                                             </div>
-                                            <div class="spinner-grow text-blurt m-3" role="status">
+                                            <div class="spinner-border spinner-border-sm text-blurt m-3" role="status">
                                                 <span class="sr-only">Loading...</span>
                                             </div>
-                                            <div class="spinner-border text-blurt m-3" role="status">
+                                            <div class="spinner-grow spinner-grow-sm text-blurt m-3" role="status">
                                                 <span class="sr-only">Loading...</span>
                                             </div>
-                                            <div class="spinner-grow text-blurt m-3" role="status">
+                                            <div class="spinner-border spinner-border-sm text-blurt m-3" role="status">
                                                 <span class="sr-only">Loading...</span>
                                             </div>
                                         </div>
@@ -768,19 +719,19 @@
                                     <ul id="incomingResult"class="list-group list-group-flush">
                                         <!-- loading spinner -->
                                         <div id="mdb-preloader" class="text-center">
-                                            <div class="spinner-grow text-blurt m-3" role="status">
+                                            <div class="spinner-grow spinner-grow-sm text-blurt m-3" role="status">
                                                 <span class="sr-only">Loading...</span>
                                             </div>
-                                            <div class="spinner-border text-blurt m-3" role="status">
+                                            <div class="spinner-border spinner-border-sm text-blurt m-3" role="status">
                                                 <span class="sr-only">Loading...</span>
                                             </div>
-                                            <div class="spinner-grow text-blurt m-3" role="status">
+                                            <div class="spinner-grow spinner-grow-sm text-blurt m-3" role="status">
                                                 <span class="sr-only">Loading...</span>
                                             </div>
-                                            <div class="spinner-border text-blurt m-3" role="status">
+                                            <div class="spinner-border spinner-border-sm text-blurt m-3" role="status">
                                                 <span class="sr-only">Loading...</span>
                                             </div>
-                                            <div class="spinner-grow text-blurt m-3" role="status">
+                                            <div class="spinner-grow spinner-grow-sm text-blurt m-3" role="status">
                                                 <span class="sr-only">Loading...</span>
                                             </div>
                                         </div>
