--- a/templates/blurt/profile.html
+++ b/templates/blurt/profile.html
@@ -31,8 +31,8 @@
             <div class="jumbotron bg-blurt text-white">
                 <img src="https://blurt.blog/images/logo.png"
                 width="150" alt="blurt logo" class="img-thumbnail">
-                <h1 class="display-4">Blurt Profile</h1>
-                <p class="lead">user information</p>
+                <!-- <h1 class="display-4">Blurt Profile</h1> -->
+                <!-- <p class="lead">user information</p> -->
             </div>
 
             <!-- flash alert -->
@@ -67,7 +67,7 @@
                       </div>
                     </div>
                     <div class="col-auto">
-                        <button type="submit" class="btn btn-blurt mb-2">Submit</button>
+                        <button type="submit" class="btn btn-blurt mb-2" disabled>Submit</button>
                     </div>
                 </div>
             </form>
