--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,7 +5,6 @@
             src="/static/images/favicon/apple-touch-icon.png"
             width="30" height="30"
             class="d-inline-block align-top" alt="blurt_logo">
-        BlurtBlock
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse"
         data-target="#navbarToggler" aria-controls="navbarToggler"
@@ -14,22 +13,22 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarToggler">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+<!--         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item">
                 <a class="nav-link" href="/blurt/stats">BlurtStats
-                    <!-- <span class="sr-only">(current)</span> -->
+                    <span class="sr-only">(current)</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/blurt/upvote">BlurtUpvote
                 </a>
             </li>
-        </ul>
+        </ul> -->
 
-        <a class="btn btn-outline-success"
+<!--         <a class="btn btn-outline-success"
             href="https://register.blurt.buzz/?referral=tomoyan"
             target="_blank" rel="noopener noreferrer"
             role="button">Get Started
-        </a>
+        </a> -->
     </div>
 </nav>
