--- a/templates/metatags.html
+++ b/templates/metatags.html
@@ -1,5 +1,5 @@
         <!-- Primary Meta Tags -->
-        <title>BlurtBlock - Blurt Profile Information</title>
+        <title>floating-meadow</title>
         <meta name="title" content="BlurtBlock - Blurt Profile Information">
         <meta name="description" content="BlurtBlock is a Blurt Blockchain Explorer. Displays user information, vote chart, reward summary, stats and more!">
 
