--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,10 +1,10 @@
 <!-- Footer -->
 <footer class="page-footer font-small">
-    <div class="footer-copyright text-center py-3">Created by
+<!--     <div class="footer-copyright text-center py-3">Created by
         <a
             href="https://blurtwallet.com/~witnesses?highlight=tomoyan"
             class="btn btn-blurt"
             target="_blank" rel="noopener noreferrer"> @tomoyan
         </a>
-    </div>
+    </div> -->
 </footer>
