comment out blurt

--- a/templates/blurt/profile.html
+++ b/templates/blurt/profile.html
@@ -63,7 +63,7 @@
                             <div class="input-group-text">@</div>
                         </div>
                         <input type="text" class="form-control" id="inlineFormInputGroup"
-                            name="username" placeholder="Username">
+                            name="username" placeholder="Username" disabled>
                       </div>
                     </div>
                     <div class="col-auto">
